refactor: Deploy.yml&CorsConfig 수정