@@ -1,6 +1,6 @@
 package com.humax.parking.config;
 
-import java.util.List;
+import java.util.*;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -13,7 +13,8 @@ public class CorsConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("https://alzzaipo.com", "http://localhost:3000"));
+        //config.setAllowedOrigins(List.of("https://alzzaipo.com", "http://localhost:3000"));
+        config.setAllowedOriginPatterns(Arrays.asList());
         config.addAllowedMethod("*");
         config.addAllowedHeader("*");
         config.setAllowCredentials(true);
